2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.cpp|h: Name change from MarkerReachedEventArgs -> 
	TimelineMarkerRoutedEventArgs (to better match managed code).

	* cbinding.h: Regenerated.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* cbinding.h: Regenerated.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: When requesting a codec download, indicate that the user
	initiated the download.

2009-11-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp:
	* plugin-debug.cpp:
	* plugin-class.cpp: Update according to Type / Value API changes.

	r: toshok

2009-11-06  Chris Toshok  <toshok@ximian.com>

	* plugin.cpp (PluginInstance::FlushSplash): WalkTreeForLoaded ->
	WalkTreeForLoadedHandlers, and explicitly emit Loaded
	synchronously.

2009-11-05  Alan McGovern  <amcgovern@novell.com>

	* cbinding.h: regen. r: toshok

2009-11-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.cpp: Don't try to throw js exceptions when returning
	from js.

	* plugin-class.h: Remove THROW_JS_EXCEPTION2, not used anymore.

	r: andreia

2009-11-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp|h: Don't create the window if the splash failed to load - 
	this fixes a crash with MS DRT #352 where the splash error handler
	shuts down the browser, causing us to crash later on when we try to
	create the window.

	r: spouliot

2009-11-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp|h: Remove all code which handles downloading of assemblies
	which aren't in the xap, since that can't happen. Some of this code was
	already commented out.

	r: spouliot

2009-11-02  Alan McGovern  <amcgovern@novell.com>

	* cbinding.h: regen. r: rolf

2009-10-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: Add missing Deployment::SetCurrent.

	r: sde

2009-10-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: Always show the codec download entry in the right click