@@ -693,7 +693,6 @@ struct MmsDataPacket;
 struct MmsHeader;
 struct MmsHeaderReason;
 struct MmsPacket;
-struct moonlight_env_options;
 struct MoonlightCollectionObject;
 struct MoonlightCollectionType;
 struct MoonlightContentObject;
@@ -726,8 +725,6 @@ struct MoonlightKeyEventArgsObject;
 struct MoonlightKeyEventArgsType;
 struct MoonlightKeyTime;
 struct MoonlightKeyTimeType;
-struct MoonlightMarkerReachedEventArgsObject;
-struct MoonlightMarkerReachedEventArgsType;
 struct MoonlightMediaElementObject;
 struct MoonlightMediaElementType;
 struct MoonlightMouseEventArgsObject;
@@ -766,6 +763,8 @@ struct MoonlightTextBoxObject;
 struct MoonlightTextBoxType;
 struct MoonlightThickness;
 struct MoonlightThicknessType;
+struct MoonlightTimelineMarkerRoutedEventArgsObject;
+struct MoonlightTimelineMarkerRoutedEventArgsType;
 struct MoonlightTimeSpan;
 struct MoonlightTimeSpanType;
 struct MoonlightUIElementObject;
