@@ -1,5 +1,12 @@
 2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* cbinding.h: Regenerated.
+
+	* plugin-class.h.in: Add changes to the .in file too so that the
+	changes survive the generator.
+
+2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* plugin-class.cpp|h: Name change from MarkerReachedEventArgs -> 
 	TimelineMarkerRoutedEventArgs (to better match managed code).
 
